scrolling allows for full page images

--- a/index.html
+++ b/index.html
@@ -1,80 +1,59 @@
 <!-- Live Free or Die. -->
 <html><head>
-		<link rel="stylesheet" href="assets/style.css?rnd=2">
+		<link rel="stylesheet" href="assets/style.css?rnd=3">
 	</head>
 	<body style="background-color:darkgrey;">
 	<div style="margin:auto;width:1505px;">
 	<div class="header">
 		<img src="assets/spunky_small_white_shadow.png">
 	</div>
-	<div id="photos" style="opacity:1;">
-	<div class="photo-row">
-		<a id="photolink0" href="https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken-public/" title="Regret" target="_blank">
-		<span class="photo-item">
-			<span class="photo-container">
-				<img id="photoframe0" src="assets/120_frame.png" class="photo-border">
-			</span>
-			<span style="position:relative;">
-				<img id="photoimage0" src="https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg" class="photo-content-120">
-			</span>
-		</span>
-		</a>
-		<a id="photolink1" href="https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken/" title="Arno" target="_blank">
-		<span class="photo-item">
-			<span class="photo-container">
-				<img id="photoframe1" src="assets/120_frame.png" class="photo-border">
-			</span>
-			<span class="photo-container">
-				<img id="photoimage1" src="https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg" class="photo-content-120">
-			</span>
-		</span>
-		</a>
+	<div id="page-builder-container">
+	 	<div class="photo-row">
+			<a href="https://www.flickr.com/photos/195169182@N08/52387709604/in/datetaken/" title="Sparks" target="_blank">
+				<span class="photo-item">
+					<span class="photo-container">
+						<img src="assets/645L_frame.png" class="photo-border">
+					</span>
+					<span class="photo-container">
+						<img src="https://live.staticflickr.com/65535/52387709604_2cbf302183.jpg" class="photo-content-645L">
+					</span>
+				</span>
+			</a>
+			<a href="https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/" title="Symphony" target="_blank">
+				<span class="photo-item">
+					<span class="photo-container">
+						<img src="assets/35_frame.png" class="photo-border">
+					</span>
+					<span class="photo-container">
+						<img src="https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg" class="photo-content-35">
+					</span>
+				</span>
+			</a>
+		</div>
+		<div class="photo-row">
+			<a href="https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken/" title="Kipper" target="_blank">
+				<span class="photo-item">
+					<span class="photo-container">
+						<img src="assets/645L_frame.png" class="photo-border">
+					</span>
+					<span class="photo-container">
+						<img src="https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg" class="photo-content-645L">
+					</span>
+				</span>
+			</a>
+			<a href="https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken/" title="Arno" target="_blank">
+				<span class="photo-item">
+					<span class="photo-container"> 
+						<img src="assets/120_frame.png" class="photo-border">
+					</span>
+					<span class="photo-container">
+						<img src="https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg" class="photo-content-120">
+					</span>
+				</span>
+			</a>
+		</div> 
 	</div>
-	<div class="photo-row">
-		<a id="photolink2" href="https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/" title="Symphony" target="_blank">
-		<span class="photo-item">
-			<span class="photo-container">
-				<img id="photoframe2" src="assets/35_frame.png" class="photo-border">
-			</span>
-			<span class="photo-container">
-				<img id="photoimage2" src="https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg" class="photo-content-35">
-			</span>
-		</span>
-		</a>
-		<a id="photolink3" href="https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken-public/" title="Kipper" target="_blank">
-		<span class="photo-item">
-			<span class="photo-container">
-				<img id="photoframe3" src="assets/645L_frame.png" class="photo-border">
-			</span>
-			<span style="position:relative;">
-				<img id="photoimage3" src="https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg" class="photo-content-645L">
-			</span>
-		</span>
-		</a>
-	</div>
-	<div class="photo-row">
-		<a id="photolink4" href="https://www.flickr.com/photos/195169182@N08/52387709604/in/datetaken/" title="Sparks" target="_blank">
-		<span class="photo-item">
-			<span class="photo-container">
-				<img id="photoframe4" src="assets/645L_frame.png" class="photo-border">
-			</span>
-			<span class="photo-container">
-				<img id="photoimage4" src="https://live.staticflickr.com/65535/52387709604_2cbf302183.jpg" class="photo-content-645L">
-			</span>
-		</span>
-		</a>
-		<a id="photolink5" href="https://www.flickr.com/photos/195169182@N08/52291879832/in/datetaken/" title="Kimi" target="_blank">
-		<span class="photo-item">
-			<span class="photo-container">
-				<img id="photoframe5" src="assets/120_frame.png" class="photo-border">
-			</span>
-			<span class="photo-container">
-				<img id="photoimage5" src="https://live.staticflickr.com/65535/52291879832_4e16dcfc7a.jpg" class="photo-content-120">
-			</span>
-		</span>
-		</a>
-	</div>
-	</div>
+	
 	<div style="width:850px;margin:auto;">
 		<div style="display:block;margin-top:70px;margin-bottom:70px;">
 			 <button onclick="goPage(-1)"><img src="assets/arrow-left.png"></button>
@@ -88,39 +67,109 @@
 			<a href="mailto:SpunkyH0rn@protonmail.com"><img src="assets/email-2.png"></a>
 			<a href="https://t.me/SpunkyH0rn" target="_blank"><img src="assets/telegram.png"></a>
 		</div>
-	</div>
-	</div>
-	
-</body></html>
+	</div
+</div>
+</body>
 <script>
 
-	// let's implement that "scrolling" feature
-	currentPage=0;
-	pages=[
-		[
-			["https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken/","Regret","https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken-public/","Arno","https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/","Symphony","https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken-public/","Kipper","https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg","645L"],
-			["https://www.flickr.com/photos/195169182@N08/52387709604/in/datetaken/","Sparks","https://live.staticflickr.com/65535/52387709604_2cbf302183.jpg","645L"],
-			["https://www.flickr.com/photos/195169182@N08/52291879832/in/datetaken/","Kimi","https://live.staticflickr.com/65535/52291879832_4e16dcfc7a.jpg","120"]
-		],
+pages=
+[
+	[
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52387709604_2cbf302183.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387709604/in/datetaken/",
+			"altText":"Sparks",
+			"format":"645L",
+			"size":"half"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/",
+			"altText":"Symphony",
+			"format":"35",
+			"size":"half"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken/",
+			"altText":"Kipper",
+			"format":"645L",
+			"size":"half"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken/",
+			"altText":"Arno",
+			"format":"120",
+			"size":"half"
+		}
+	],
+	[
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52226438723_9d01b8df97_h.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken/",
+			"altText":"Regret",
+			"format":"120_large",
+			"size":"full",
+			"x":"1172",
+			"y":"1155"
+		}
+	],
+	[
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52387741805_187d975a19_c.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387741805/in/datetaken-public/",
+			"altText":"Gali",
+			"format":"645P",
+			"size":"half",
+			"x":"366",
+			"y":"500"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/51998676718_61a5b18399.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/51998676718/in/datetaken/",
+			"altText":"Crowd",
+			"format":"35",
+			"size":"half"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52225439312_3e70816f8b.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52225439312/in/datetaken/",
+			"altText":"AC 2022",
+			"format":"120",
+			"size":"half"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52387549523_cf9ec30fbb.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387549523/in/datetaken-public/",
+			"altText":"Kipper",
+			"format":"645P",
+			"size":"half"
+		}
+	],
+	[
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52387549633_cc92f4d124_h.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387549633/in/datetaken/",
+			"altText":"Kipper",
+			"format":"645P_large",
+			"size":"full",
+			"x":"846",
+			"y":"1155"
+		}
+	]
+	// 
+];
 
-		
-		
-		
-		[
-			["https://www.flickr.com/photos/195169182@N08/52203377401/in/datetaken/","Grace","https://live.staticflickr.com/65535/52203377401_ac54a870e2.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52387741805/in/datetaken-public/","Gali","https://live.staticflickr.com/65535/52387741805_187d975a19.jpg","645P"],
-			["https://www.flickr.com/photos/195169182@N08/51998676718/in/datetaken/","Crowd","https://live.staticflickr.com/65535/51998676718_61a5b18399.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52225439312/in/datetaken/","AC 2022","https://live.staticflickr.com/65535/52225439312_3e70816f8b.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52387549523/in/datetaken-public/","Kipper","https://live.staticflickr.com/65535/52387549523_cf9ec30fbb.jpg","645P"],
-			["https://www.flickr.com/photos/195169182@N08/51998676783/in/datetaken","Aria","https://live.staticflickr.com/65535/51998676783_15f3a9efd0.jpg","35P"]
-		]
-	];
+
+	// let's implement that "scrolling" feature
+	// lord help us
+	currentPage=0;
 	numPages=pages.length-1;
 	
 	function goPage(offset) {
+		pageBuilderContainer = document.getElementById("page-builder-container");
+		pageBuilderContainer.innerHTML = '';
 		targetPage=currentPage+offset;
 		
 		// let's make sure we aren't going out of bounds
@@ -135,41 +184,51 @@
 		//alert("current page" + currentPage);
 		
 		target=pages[targetPage];
-		
-		document.getElementById("photolink0").href = target[0][0];
-		document.getElementById("photolink0").title = target[0][1];
-		document.getElementById("photoframe0").src = "assets/" + target[0][3] + "_frame.png";
-		document.getElementById("photoimage0").className = "photo-content-" + target[0][3];
-		document.getElementById("photoimage0").src = target[0][2];
-		
-		document.getElementById("photolink1").href = target[1][0];
-		document.getElementById("photolink1").title = target[1][1];
-		document.getElementById("photoframe1").src = "assets/" + target[1][3] + "_frame.png";
-		document.getElementById("photoimage1").className = "photo-content-" + target[1][3];
-		document.getElementById("photoimage1").src = target[1][2];
-		
-		document.getElementById("photolink2").href = target[2][0];
-		document.getElementById("photolink2").title = target[2][1];
-		document.getElementById("photoframe2").src = "assets/" + target[2][3] + "_frame.png";
-		document.getElementById("photoimage2").className = "photo-content-" + target[2][3];
-		document.getElementById("photoimage2").src = target[2][2];
-		
-		document.getElementById("photolink3").href = target[3][0];
-		document.getElementById("photolink3").title = target[3][1];
-		document.getElementById("photoframe3").src = "assets/" + target[3][3] + "_frame.png";
-		document.getElementById("photoimage3").className = "photo-content-" + target[3][3];
-		document.getElementById("photoimage3").src = target[3][2];
-		
-		document.getElementById("photolink4").href = target[4][0];
-		document.getElementById("photolink4").title = target[4][1];
-		document.getElementById("photoframe4").src = "assets/" + target[4][3] + "_frame.png";
-		document.getElementById("photoimage4").className = "photo-content-" + target[4][3];
-		document.getElementById("photoimage4").src = target[4][2];
-		
-		document.getElementById("photolink5").href = target[5][0];
-		document.getElementById("photolink5").title = target[5][1];
-		document.getElementById("photoframe5").src = "assets/" + target[5][3] + "_frame.png";
-		document.getElementById("photoimage5").className = "photo-content-" + target[5][3];
-		document.getElementById("photoimage5").src = target[5][2];
+		for( i = 0; i < pages[targetPage].length; i=i+2 ) {
+						dimensions=""
+				if( pages[targetPage][i].hasOwnProperty("x") ) {
+					dimensions="width=\"" + pages[targetPage][i].x + "px\" height=\"" + pages[targetPage][i].y + "\""
+				}
+			if( pages[targetPage][i].size == "half" ) {
+			pageBuilderContainer.innerHTML += ' \
+		<div class="photo-row"> \
+			<a href="' + pages[targetPage][i].linkUrl + '" title="Sparks" target="_blank"> \
+			<span class="photo-item"> \
+				<span class="photo-container"> \
+					<img src="assets/' + pages[targetPage][i].format + '_frame.png" class="photo-border"> \
+				</span> \
+				<span class="photo-container"> \
+					<img src="' + pages[targetPage][i].imageUrl + '" ' + dimensions + ' class="photo-content-' + pages[targetPage][i].format + '"> \
+				</span> \
+			</span> \
+			</a> \
+			<a href="' + pages[targetPage][i+1].linkUrl + '" title="Kimi" target="_blank"> \
+			<span class="photo-item"> \
+				<span class="photo-container"> \
+					<img src="assets/' + pages[targetPage][i+1].format + '_frame.png" class="photo-border"> \
+				</span> \
+				<span class="photo-container"> \
+					<img src="' + pages[targetPage][i+1].imageUrl + '" class="photo-content-' + pages[targetPage][i+1].format + '"> \
+				</span> \
+			</span> \
+			</a> \
+		</div> ';
+			} else if( pages[targetPage][i].size = "full" ) {
+				pageBuilderContainer.innerHTML += ' \
+	<div class="photo-row-full"> \
+		<a id="photolink0" href="' + pages[targetPage][i].linkUrl + '" title="Kipper" target="_blank"> \
+		<span class="photo-item-full"> \
+			<span class="photo-container"> \
+				<img id="photoframe0" src="assets/' + pages[targetPage][i].format + '_frame.png" class="photo-border"> \
+			</span> \
+			<span style="position:relative;"> \
+				<img id="photoimage0" src="' + pages[targetPage][i].imageUrl + '" ' + dimensions + ' class="photo-content-' + pages[targetPage][i].format + '"> \
+			</span> \
+		</span> \
+		</a> ';
+			}
+		}
+
 	}
+
 </script>
