--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Live Free or Die. -->
 <html><head>
-		<link rel="stylesheet" href="assets/style.css?rnd=4">
+		<link rel="stylesheet" href="assets/stylesheet.css">
 		<link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
 		<meta name="viewport">
 	</head>
