added 8x10 frame; updated tracklist

--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@ pages=
 [
 	[
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52387709604_2cbf302183.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387709604/in/datetaken/",
-			"altText":"Sparks",
-			"format":"645L",
+			"imageUrl":"https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52226438723/in/album-72177720300710716/",
+			"altText":"Regret",
+			"format":"120",
 			"size":"half",
-			"x": "384",
-			"y": "280"
+			"x": "389",
+			"y": "384"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/",
-			"altText":"Symphony",
-			"format":"35",
+			"imageUrl":"https://live.staticflickr.com/65535/52508825946_5fb596485f.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52508825946/in/datetaken/",
+			"altText":"Arrow",
+			"format":"8x10P",
 			"size":"half",
-			"x": "384",
-			"y": "256"
+			"x": "307",
+			"y": "384"
 		},
 		{
 			"imageUrl":"https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg",
@@ -72,12 +72,12 @@ pages=
 			"y": "280"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken/",
-			"altText":"Arno",
-			"format":"120",
+			"imageUrl":"https://live.staticflickr.com/65535/52442003727_834c3cb6bd.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52442003727/in/album-72177720303045095/",
+			"altText":"Autumn",
+			"format":"8x10P",
 			"size":"half",
-			"x": "389",
+			"x": "307",
 			"y": "384"
 		}
 	],
