--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ pages=
 			"imageUrl":"https://live.staticflickr.com/65535/52508825946_5fb596485f.jpg",
 			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52508825946/in/datetaken/",
 			"altText":"Arrow",
-			"format":"8x10P",
+			"format":"8x10p",
 			"size":"half",
 			"x": "307",
 			"y": "384"
@@ -75,7 +75,7 @@ pages=
 			"imageUrl":"https://live.staticflickr.com/65535/52442003727_834c3cb6bd.jpg",
 			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52442003727/in/album-72177720303045095/",
 			"altText":"Autumn",
-			"format":"8x10P",
+			"format":"8x10p",
 			"size":"half",
 			"x": "307",
 			"y": "384"
