--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ pages=
 [
 	[
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52226438723/in/album-72177720300710716/",
-			"altText":"Regret",
-			"format":"120",
+			"imageUrl":"https://live.staticflickr.com/65535/52572587635_ee8dc2b141.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52572587635/in/datetaken-public/",
+			"altText":"Fwanky",
+			"format":"8x10p",
 			"size":"half",
-			"x": "389",
+			"x": "307",
 			"y": "384"
 		},
 		{
@@ -72,9 +72,9 @@ pages=
 			"y": "280"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52442003727_834c3cb6bd.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52442003727/in/album-72177720303045095/",
-			"altText":"Autumn",
+			"imageUrl":"https://live.staticflickr.com/65535/52671545425_c109a04ea8.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52628049604/in/datetaken/",
+			"altText":"Symphony",
 			"format":"8x10p",
 			"size":"half",
 			"x": "307",
