--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 	
 	<div class="text-center" >
 		<div class="row">
-		<div class="col-2 d-flex justify-content-start">
-				<!-- <button onclick="goPage(-1)" class="align-self-center"><img class="arrow d-none d-xxl-inline-block" src="assets/arrow-left.png" style="filter:opacity(0%)"></button> -->
+			<div class="col-2 d-flex justify-content-start">
+				<!--<button onclick="goPage(-1)" class="align-self-center"><img class="arrow d-none d-xxl-inline-block" src="assets/arrow-left.png"></button>-->
 				<img class="arrow d-none d-xxl-inline-block" src="assets/arrow-left.png?1" style="filter:opacity(0%)">
 			</div>
 			<div id="page-builder-container" class="col" style="padding-top: 64px;">
 
 			</div>
-		<div class="col-2 d-flex justify-content-end">
-			<img class="arrow d-none d-xxl-inline-block" src="assets/arrow-right.png?1" style="filter:opacity(0%)">
-				<!-- <button onclick="goPage(1)" class="align-self-center"><img class="arrow d-none d-xxl-inline-block" src="assets/arrow-right.png" style="filter:opacity(0%)"></button> -->
+			<div class="col-2 d-flex justify-content-end">
+				<img class="arrow d-none d-xxl-inline-block" src="assets/arrow-right.png?1" style="filter:opacity(0%)">
+				<!--<button onclick="goPage(1)" class="align-self-center"><img class="arrow d-none d-xxl-inline-block" src="assets/arrow-right.png"></button>-->
 			</div>
 		</div>
 	</div>
@@ -54,44 +54,33 @@ pages=
 			"y": "384"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52508825946_5fb596485f.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52508825946/in/datetaken/",
-			"altText":"Arrow",
-			"format":"8x10p",
+			"imageUrl":"https://live.staticflickr.com/65535/52709047925_69a938a512.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52709047925/in/datetaken/",
+			"altText":"Armis",
+			"format":"8x10l",
 			"size":"half",
-			"x": "307",
+			"x": "384",
+			"y": "307"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52709119898_16c5f1830f.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52709119898/in/datetaken/",
+			"altText":"Jasper &amp; Marrz",
+			"format":"120",
+			"size":"half",
+			"x": "384",
 			"y": "384"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken/",
-			"altText":"Kipper",
-			"format":"645L",
+			"imageUrl":"https://live.staticflickr.com/65535/52685245400_21233786d5.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52685245400/in/datetaken/",
+			"altText":"Lekida",
+			"format":"120",
 			"size":"half",
 			"x": "384",
-			"y": "280"
-		},
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52671545425_c109a04ea8.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52628049604/in/datetaken/",
-			"altText":"Symphony",
-			"format":"8x10p",
-			"size":"half",
-			"x": "307",
 			"y": "384"
 		}
 	],
-/*	[
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52226438723_9d01b8df97_h.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken/",
-			"altText":"Regret",
-			"format":"120_large",
-			"size":"full",
-			"x":"1172",
-			"y":"1155"
-		}
-	], */
 	[
 		{
 			"imageUrl":"https://live.staticflickr.com/65535/52387741805_187d975a19_c.jpg",
@@ -103,10 +92,10 @@ pages=
 			"y":"384"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/51998676718_61a5b18399.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/51998676718/in/datetaken/",
-			"altText":"Crowd",
-			"format":"35",
+			"imageUrl":"https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken/",
+			"altText":"Kipper",
+			"format":"645L",
 			"size":"half",
 			"x": "384",
 			"y": "280"
@@ -121,13 +110,13 @@ pages=
 			"y": "384"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52387549523_cf9ec30fbb.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52387549523/in/datetaken-public/",
-			"altText":"Kipper",
-			"format":"645P",
+			"imageUrl":"https://live.staticflickr.com/65535/52671545425_c109a04ea8.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52628049604/in/datetaken/",
+			"altText":"Symphony",
+			"format":"8x10p",
 			"size":"half",
-			"x":"280",
-			"y":"384"
+			"x": "307",
+			"y": "384"
 		}
 	]/*,
 	[
