--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<!-- <div class="container"> -->
 	<div style="max-width: 1440px; margin-left: auto; margin-right: auto;">
 	<div class="d-flex justify-content-center">
+
 		<div class="header  row">
 			<div class="col"><img class="spunky" src="assets/spunky_1502.png"></div>
 		</div>
@@ -45,7 +46,16 @@ pages=
 [
 	[
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52572587635_ee8dc2b141.jpg",
+			"imageUrl":"https://live.staticflickr.com/65535/52827987571_09796354fd.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52827349662/in/datetaken/",
+			"altText":"Rigel Xiros",
+			"format":"8x10p",
+			"size":"half",
+			"x": "307",
+			"y": "384"
+		},
+		{
+			"imageUrl":"https://live.staticflickr.com/65535/52572587635_e0a2f26bc1.jpg",
 			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52572587635/in/datetaken-public/",
 			"altText":"Fwanky",
 			"format":"8x10p",
@@ -54,30 +64,21 @@ pages=
 			"y": "384"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52709047925_69a938a512.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52709047925/in/datetaken/",
-			"altText":"Armis",
-			"format":"8x10l",
+			"imageUrl":"https://live.staticflickr.com/65535/52828394525_cf0343a8db.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52776929647/in/datetaken/",
+			"altText":"Caesar",
+			"format":"8x10p",
 			"size":"half",
-			"x": "384",
-			"y": "307"
-		},
-		{
-			"imageUrl":"https://live.staticflickr.com/65535/52709119898_16c5f1830f.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52709119898/in/datetaken/",
-			"altText":"Jasper &amp; Marrz",
-			"format":"120",
-			"size":"half",
-			"x": "384",
+			"x": "307",
 			"y": "384"
 		},
 		{
-			"imageUrl":"https://live.staticflickr.com/65535/52685245400_21233786d5.jpg",
-			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52685245400/in/datetaken/",
+			"imageUrl":"https://live.staticflickr.com/65535/52852330104_55b57c1a21.jpg",
+			"linkUrl":"https://www.flickr.com/photos/195169182@N08/52852330104/in/datetaken/",
 			"altText":"Lekida",
-			"format":"120",
+			"format":"35P",
 			"size":"half",
-			"x": "384",
+			"x": "257",
 			"y": "384"
 		}
 	],
